--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -29,6 +30,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "aws-sdk": "^2.1181.0",
     "dotenv": "^16.0.1",
+    "fast-two-sms": "^3.0.0",
     "mysql2": "^2.3.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
